...
            android:background="@color/colorWindow"
            android:src="@drawable/vert_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ReturnButton"
            android:layout_width="59dp"
            android:layout_height="49dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:background="@null"
            android:src="@drawable/vert_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/changePortions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorWindow"
            android:src="@drawable/fork_knife"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/serves"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <CheckBox
            android:id="@+id/addKudos"
            android:layout_width="55dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/LetsCook"
...
