...
            android:layout_height="wrap_content"
            android:text="Comments" />

    </com.google.android.material.tabs.TabLayout>

    <Button
        android:id="@+id/LetsCook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Lets Cook!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/RecipeFrameLayout"
        android:layout_width="0dp"
...
