...

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/recipeInfoEggs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/eggs"
                        android:padding="2sp"
                        android:visibility="gone"
                        android:adjustViewBounds="true"/>
...
                        android:src="@drawable/soya"
                        android:padding="2sp"
                        android:visibility="gone"
                        android:adjustViewBounds="true"/>

                    <ImageView
                        android:id="@+id/recipeInfoWheat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2sp"
                        android:src="@drawable/gluten"
                        android:visibility="gone"
                        android:adjustViewBounds="true"/>
...
                    android:ems="10"
                    android:gravity="center"
                    android:text=""
                    android:textSize="14dp" />

                <ImageButton
                    android:id="@+id/reheatInfoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    android:layout_marginEnd="69dp"
                    android:background="@color/colorWindow"
                    android:src="@android:drawable/ic_dialog_info"
...
